--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -16,9 +16,9 @@
     <body>
     <!-- Header for About me page -->
         
-        <h2>About Me:</h2>
-
-    <p>This is is a paragraph tag</p>    
+        <h2>Welcome to my About Me Page:</h2>
+        <hr />
+        <img src="" alt="A Picture of Julian">
 
     </body>
     
