--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -4,7 +4,7 @@
       -UnityID: jicolvin
       -Date: 11/22/2019
       -Assignment: Webpages GL
-      -Description: Guidd lab assignment, about me webpage
+      -Description: Guided lab assignment, about me webpage
       -->
     <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -21,7 +21,7 @@
         <img src="IMG_2754.JPG" alt="A Picture of Julian">
         <p>Hi, my name is Julian.
             I am from Kentucky.
-            I am a nuclear engineering major and I'm Naval ROTC.
+            I am a nuclear engineering major and in I'm Naval ROTC.
         </p>
         <br />
         <br />
