--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -13,16 +13,17 @@
         <title>About Julian Colvin</title>
     </head>
     
-    <body>
+    <body style="Background-color:#FF00FF">
     <!-- Header for About me page -->
         
         <h2>Welcome to my About Me Page:</h2>
         <hr />
         <img src="IMG_2754.JPG" alt="A Picture of Julian">
         <p>Hi, my name is Julian.
-            I am from Kentucky.
-            I am a nuclear engineering major and in I'm Naval ROTC.
+            I am from <strong>Kentucky</strong>.
+            I am a <em>nuclear</em> engineering major and in I'm <ins>Naval ROTC</ins>.
         </p>
+        <p> C<sub>2</sub>H<sub>5</sub>OH is my favourite <del>element</del> chemical formula. E = mc<sup>2</sup> is my favourite physics formula.<p>
         <br />
         <br />
         <h4>My Favorite Things:</h4>
