--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -36,7 +36,7 @@
         </ul>
         <br />
         <table>
-            <tr> <the>Name</tr>  <th>Characteristic</th> </tr>
+            <tr> <th>Name</tr>  <th>Characteristic</th> </tr>
             <tr> <td>Elie Wiesel</td>  <td>Experience</td> </tr>
             <tr> <td>Abe Lincoln</td>  <td>Conviction</td> </tr>
         </table>
