--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -35,7 +35,7 @@
             <li>science</li>
         </ul>
         <br />
-        <table>
+        <table class="table-border">
             <tr> <th>Name</tr>  <th>Characteristic</th> </tr>
             <tr> <td>Elie Wiesel</td>  <td>Experience</td> </tr>
             <tr> <td>Abe Lincoln</td>  <td>Conviction</td> </tr>
