--- a/Webpages.GL.html
+++ b/Webpages.GL.html
@@ -18,7 +18,7 @@
         
         <h2>Welcome to my About Me Page:</h2>
         <hr />
-        <img src="IMG_2754.JPG" alt="A Picture of Julian">
+        <img src="IMG_2754.JPG" alt="A Picture of Julian" id="photo-resize">
         <p>Hi, my name is Julian.
             I am from <strong>Kentucky</strong>.
             I am a <em>nuclear</em> engineering major and in I'm <ins>Naval ROTC</ins>.
